--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "test-dist-es6-7",
   "version": "0.0.1",
+  "bin": {
+    "run": "src/bin/run.js"
+  },
   "scripts": {
     "prepublish": "dist-es6"
   },
   "devDependencies": {
-    "dist-es6": "^0.1.15"
+    "dist-es6": "^0.1.15",
+    "babel-preset-react": "^6.5.0"
   }
 }
